--- a/noir-caffe/home.css
+++ b/noir-caffe/home.css
@@ -1,8 +1,26 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+/* Ficha de perfil */
+main {
+    width: 80%;
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     background-color: #f4f4f4;
+    background-image: url(../img/bg.png) ;
+    background: no-repeat;
+    background-size:cover ;
 }
 
 header {
